refactored header and main sections to have position absolute and moved footer to main and fixed all resulting layout bugs

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,5 +1,7 @@
 #header {
   width: 100%;
+  position: absolute;
+  top: 0;
 }
 
 // Header top section
@@ -7,9 +9,10 @@
 #header-top {
   padding: 20px 15px;
 
-
   @media (min-width: 768px) {
     padding: 1.25rem 0;
+    display: flex;
+    justify-content: center;
   }
 
   @media (min-width: 992px) {
@@ -50,6 +53,7 @@
 
   // Logo
   #title {
+    flex: 1;
 
     @media (min-width: 768px) {
       padding-left: 15px;
@@ -70,15 +74,17 @@
 
     img {
       cursor: pointer;
-      width: 159.59px;
+      max-height: 54px;
 
 
       @media (min-width: 768px) {
         min-width: 345px;
+        max-height: 60px;
       }
 
       @media (min-width: 992px) {
         width: 374px;
+        max-height: 65px;
       }
 
       @media (min-width: 1260px) {
