--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -14,7 +14,7 @@
 
 
   &-content {
-    padding-top: 6.5rem;
+    padding: 104px 20px 0 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -159,31 +159,5 @@
 
   }
 
-
-
-  // This does not work here, it only works in the head and I have no idea why
-
-  // @media (min-width: 992px) {
-  //   #hero {
-  //     background-blend-mode: normal;
-
-  //     &::before {
-  //       content: "";
-  //       position: absolute;
-  //       top: 0;
-  //       left: 0;
-  //       right: 0;
-  //       bottom: 0;
-  //       width: 70%;
-  //       height: 100%;
-  //       background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  //     }
-
-  //     * {
-  //       z-index: 1;
-  //     }
-  //   }
-
-  // }
 
 }
